[package]
name = "mdbook-frntmtr"
version = "0.1.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.60"
mdbook-preprocessor = "0.5.2"
regex = "1.12.3"
semver = "1.0.27"
serde_json = "1.0.149"

notify = "6"
walkdir = "2"
minijinja = { version = "2", features = ["loader"] }
